--- a/gb/17/7/4/n9353678.md
+++ b/gb/17/7/4/n9353678.md
@@ -1,60 +1,65 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/pgnstk3616/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pgnstk3616/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/pgnstk3616/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/pgnstk3616/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/pgnstk3616/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pgnstk3616/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/pgnstk3616/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/pgnstk3616/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/pgnstk3616/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/pgnstk3616/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/pgnstk3616/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/pgnstk3616/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/pgnstk3616/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/pgnstk3616/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/pgnstk3616/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/pgnstk3616/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/pgnstk3616/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/pgnstk3616/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/pgnstk3616/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/pgnstk3616/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/pgnstk3616/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/pgnstk3616/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/pgnstk3616/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/pgnstk3616/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/pgnstk3616/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/pgnstk3616/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/pgnstk3616/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/pgnstk3616/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/pgnstk3616/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/pgnstk3616/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/pgnstk3616/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/pgnstk3616/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/pgnstk3616/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/pgnstk3616/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/pgnstk3616/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/pgnstk3616/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/pgnstk3616/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/pgnstk3616/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/pgnstk3616/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/pgnstk3616/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/pgnstk3616/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/pgnstk3616/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/pgnstk3616/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/pgnstk3616/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/pgnstk3616/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/pgnstk3616/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/pgnstk3616/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>父亲节米蛋糕东区冠军出炉   26日进军全国赛</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2017年07月04日讯】（大纪元记者詹亦菱台湾花莲报导）为引导烘焙业界运用米谷粉结合在地农特产，能在节庆中烘焙制品，农粮署东区分署4日举办东区初赛，选出4名来自宜、花、东的烘焙高手，将在26日进入<ahref="https://github.com/pgnstk3616/djy/blob/master/gb/tag/%E5%85%A8%E5%9B%BD%E8%B5%9B.md#1">全国赛</a>，争取最高20万元奖金，进军全国赛的有台东名展商业社、花莲理想大地渡假饭店、TOP烘焙坊及宜兰香菓园烘焙坊取得参赛资格。</p>
-<p>农粮署东区分署说明，参赛者需运用国内产制之米谷粉，搭配国产香蕉、红龙果、地瓜及落花生等指定食材，制作米谷粉含量达51％以上之创意<ahref="https://github.com/pgnstk3616/djy/blob/master/gb/tag/%E7%B1%B3%E8%9B%8B%E7%B3%95.md#1">米蛋糕</a>，各区域赛参赛者名次排序前40%者将取得<ahref="https://github.com/pgnstk3616/djy/blob/master/gb/tag/%E5%85%A8%E5%9B%BD%E8%B5%9B.md#1">全国赛</a>参赛资格，与来自全台各地的好手共同角逐全国<ahref="https://github.com/pgnstk3616/djy/blob/master/gb/tag/%E7%88%B6%E4%BA%B2%E8%8A%82.md#1">父亲节</a><ahref="https://github.com/pgnstk3616/djy/blob/master/gb/tag/%E7%B1%B3%E8%9B%8B%E7%B3%95.md#1">米蛋糕</a>总冠军。</p>
+<p>【大纪元2017年07月04日讯】（大纪元记者詹亦菱台湾花莲报导）为引导烘焙业界运用米谷粉结合在地农特产，能在节庆中烘焙制品，农粮署东区分署4日举办东区初赛，选出4名来自宜、花、东的烘焙高手，将在26日进入<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%A8%E5%9B%BD%E8%B5%9B.md#1">全国赛</a>，争取最高20万元奖金，进军全国赛的有台东名展商业社、花莲理想大地渡假饭店、TOP烘焙坊及宜兰香菓园烘焙坊取得参赛资格。</p>
+<p>农粮署东区分署说明，参赛者需运用国内产制之米谷粉，搭配国产香蕉、红龙果、地瓜及落花生等指定食材，制作米谷粉含量达51％以上之创意<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%B1%B3%E8%9B%8B%E7%B3%95.md#1">米蛋糕</a>，各区域赛参赛者名次排序前40%者将取得<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%A8%E5%9B%BD%E8%B5%9B.md#1">全国赛</a>参赛资格，与来自全台各地的好手共同角逐全国<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%88%B6%E4%BA%B2%E8%8A%82.md#1">父亲节</a><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%B1%B3%E8%9B%8B%E7%B3%95.md#1">米蛋糕</a>总冠军。</p>
 <p>获得冠军台东名展商业社叶建志说，用米谷粉做蛋糕难易控制黏稠与泡发度，食材冰过后又容易老化，在创作上是突破的重点；这次蛋糕体部分采用美式乡村热牛奶蛋糕作为基础创作，并添加纯米谷粉、地瓜、花生来增加风味和层次。夹馅第一层是坚果焦糖香蕉酱、味道温润浓郁，像是父亲双手和肩膀一样厚实? 稳重，第二层是红火龙果布蕾、味道清爽、口感柔嫩、像是诉说着父亲与亲子间每天发生的小确性。</p>
-<figure id="attachment_9353727" style="width: 600px" class="wp-caption aligncenter"><img class="size-large wp-image-9353727" src="https://i.epochtimes.com/assets/uploads/2017/07/272040_medium-600x399.jpg" alt="农粮署东区分署4日举行“2017父亲节米蛋糕创意大赛”东区初赛，冠军是台东名展商业社的甜点主厨叶建志获得。（詹亦菱／大纪元）" width="600" b="399" /><figcaption class="wp-caption-text">农粮署东区分署4日举行“2017<ahref="https://github.com/pgnstk3616/djy/blob/master/gb/tag/%E7%88%B6%E4%BA%B2%E8%8A%82.md#1">父亲节</a>米蛋糕创意大赛”东区初赛，冠军是台东名展商业社的甜点主厨叶建志获得。（詹亦菱／大纪元）</figcaption></figure>
+<figure id="attachment_9353727" aria-describedby="caption-attachment-9353727" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/07/272040_medium-600x399.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-large wp-image-9353727" src="https://i.epochtimes.com/assets/uploads/2017/07/272040_medium-600x399.jpg" alt="农粮署东区分署4日举行“2017父亲节米蛋糕创意大赛”东区初赛，冠军是台东名展商业社的甜点主厨叶建志获得。（詹亦菱／大纪元）" width="600" b="399" /></a><figcaption id="caption-attachment-9353727" class="wp-caption-text">农粮署东区分署4日举行“2017<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%88%B6%E4%BA%B2%E8%8A%82.md#1">父亲节</a>米蛋糕创意大赛”东区初赛，冠军是台东名展商业社的甜点主厨叶建志获得。（詹亦菱／大纪元）</figcaption></figure>
 <p>荣获季军为理想大地点心主厨谢铭城说，大地创造物美的农特产，巧克力红龙蕉香紫芋地瓜，是结合在地美味红龙果、香蕉与丰富纤维质细的紫芋地瓜；敲响美食盛宴。口感层次分明、酸中带甜，甜而不腻。另外自由创作款为玉米红萝卜南瓜蛋糕，是将有机农东昇南瓜、红萝卜、玉米融入蛋糕，上层将小黄瓜和柠檬打碎，形成蒟蒻的口感；鲜艳亮丽的外表，绝不添加任何色素，多样化的层次，除丰富味蕾外，又能突显在地特色风情。</p>
-<figure id="attachment_9353734" style="width: 600px" class="wp-caption aligncenter"><img class="size-large wp-image-9353734" src="https://i.epochtimes.com/assets/uploads/2017/07/272044_medium-600x398.jpg" alt="农粮署东区分署4日举行“2017父亲节米蛋糕创意大赛”东区初赛。（詹亦菱／大纪元）" width="600" b="398" /><figcaption class="wp-caption-text">农粮署东区分署4日举行“2017父亲节米蛋糕创意大赛”东区初赛。（詹亦菱／大纪元）</figcaption></figure>
+<figure id="attachment_9353734" aria-describedby="caption-attachment-9353734" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/07/272044_medium-600x398.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-large wp-image-9353734" src="https://i.epochtimes.com/assets/uploads/2017/07/272044_medium-600x398.jpg" alt="农粮署东区分署4日举行“2017父亲节米蛋糕创意大赛”东区初赛。（詹亦菱／大纪元）" width="600" b="398" /></a><figcaption id="caption-attachment-9353734" class="wp-caption-text">农粮署东区分署4日举行“2017父亲节米蛋糕创意大赛”东区初赛。（詹亦菱／大纪元）</figcaption></figure>
 <p>评审李永评表示，米谷粉跟面粉制作的蛋糕不同，在于面团老化的问题上处理，需要靠很多的经验，而且鼓励选用有产销履历的在地食材，得分就会比较高，但困难的是有些食材在味道上会有冲突，所以要靠选手的经验与技巧克服，对产品配方、创意、食材运用及产品流通容易度等评比选出4名。</p>
-<figure id="attachment_9353740" style="width: 600px" class="wp-caption aligncenter"><img class="size-large wp-image-9353740" src="https://i.epochtimes.com/assets/uploads/2017/07/272048_medium-600x399.jpg" alt="农粮署东区分署4日举行“2017父亲节米蛋糕创意大赛”东区初赛，获得冠军由台东名展商业社叶建志的创作(左)，亚军为花莲理想大地渡假饭店谢铭城的创作(右)。（詹亦菱／大纪元）" width="600" b="399" /><figcaption class="wp-caption-text">农粮署东区分署4日举行“2017父亲节米蛋糕创意大赛”东区初赛，获得冠军由台东名展商业社叶建志的创作(左)，亚军为花莲理想大地渡假饭店谢铭城的创作(右)。（詹亦菱／大纪元）</figcaption></figure>
+<figure id="attachment_9353740" aria-describedby="caption-attachment-9353740" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/07/272048_medium-600x399.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-large wp-image-9353740" src="https://i.epochtimes.com/assets/uploads/2017/07/272048_medium-600x399.jpg" alt="农粮署东区分署4日举行“2017父亲节米蛋糕创意大赛”东区初赛，获得冠军由台东名展商业社叶建志的创作(左)，亚军为花莲理想大地渡假饭店谢铭城的创作(右)。（詹亦菱／大纪元）" width="600" b="399" /></a><figcaption id="caption-attachment-9353740" class="wp-caption-text">农粮署东区分署4日举行“2017父亲节米蛋糕创意大赛”东区初赛，获得冠军由台东名展商业社叶建志的创作(左)，亚军为花莲理想大地渡假饭店谢铭城的创作(右)。（詹亦菱／大纪元）</figcaption></figure>
 <p>责任编辑：郑桦</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/pgnstk3616/djy/blob/master/gb/16/7/16/n8105457.md#1">父亲节倒数 表孝意前五名调查出炉</a></li>
-<li><a href="https://github.com/pgnstk3616/djy/blob/master/gb/16/8/5/n8171600.md#1">蔡英文与百岁老兵切蛋糕 送父亲节祝福</a></li>
-<li><a href="https://github.com/pgnstk3616/djy/blob/master/gb/16/8/6/n8174116.md#1">父亲节快乐！  DIY玫瑰卡片表心意</a></li>
-<li><a href="https://github.com/pgnstk3616/djy/blob/master/gb/16/8/7/n8177084.md#1">父亲节快乐？台调查：育儿费用占收入37%</a></li>
-<li><a href="https://github.com/pgnstk3616/djy/blob/master/gb/16/8/8/n8179352.md#1">父亲节礼物 赖清德向儿子要这个</a></li>
-<li><a href="https://github.com/pgnstk3616/djy/blob/master/gb/16/8/8/n8180267.md#1">好成绩当父亲节礼物 美食赛台父子同夺金</a></li>
-<li><a href="https://github.com/pgnstk3616/djy/blob/master/gb/16/8/9/n8182757.md#1">最棒父亲节礼物  警方助父找回身障儿</a></li>
-<li><a href="https://github.com/pgnstk3616/djy/blob/master/gb/20/7/26/n12284876.md#1">全球首艘复航邮轮 探索梦号台湾跳岛游程</a></li>
-<li><a href="https://github.com/pgnstk3616/djy/blob/master/gb/20/7/26/n12284342.md#1">宜科环评突破 可量产 产业荣景可期</a></li>
-<li><a href="https://github.com/pgnstk3616/djy/blob/master/gb/20/7/25/n12282951.md#1">“闪冬来宜兰-2020兰博大厅小市集”开张</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/7/16/n8105457.md#1">父亲节倒数 表孝意前五名调查出炉</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/5/n8171600.md#1">蔡英文与百岁老兵切蛋糕 送父亲节祝福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/6/n8174116.md#1">父亲节快乐！  DIY玫瑰卡片表心意</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177084.md#1">父亲节快乐？台调查：育儿费用占收入37%</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/8/n8179352.md#1">父亲节礼物 赖清德向儿子要这个</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/8/n8180267.md#1">好成绩当父亲节礼物 美食赛台父子同夺金</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/9/n8182757.md#1">最棒父亲节礼物  警方助父找回身障儿</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680755.md#1">基隆信义国小获“儿童理财教育计划”金牌认证</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680912.md#1">花莲县玉里、富里2产销班 荣获全国绩优</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680844.md#1">基隆筛检3657人 新增6例</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/27/n10430861.md#1" target="_blank">新闻奇才拒赴台湾 命丧中共劳改营</a></li><li><a href="https://github.com/pgnstk3616/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/5/1/n3859798.md#1" target="_blank">乡音：这样的菜农越多越好</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/22/n10079307.md#1" target="_blank">林辉：周恩来主任秘书自杀 亲戚文革遭殃</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/29/n10097243.md#1" target="_blank">大学教授炼法轮功身心受益 反迫害控告江泽民</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/pgnstk3616/djy/blob/master/gb/20/7/25/n12282735.md#1">你中奖了吗？109年5-6月统一发票兑奖资讯</a></li>
-<li><a href="https://github.com/pgnstk3616/djy/blob/master/gb/20/7/24/n12280529.md#1">战胜中共暴政 蓬佩奥重磅演讲全文字幕版</a></li>
-<li><a href="https://github.com/pgnstk3616/djy/blob/master/gb/20/7/25/n12282678.md#1">中领馆关闭 专家：美对付中共还有10大招</a></li>
-<li><a href="https://github.com/pgnstk3616/djy/blob/master/gb/20/7/26/n12284398.md#1">阿里巴巴创始人马云被印度法院传唤</a></li>
-<li><a href="https://github.com/pgnstk3616/djy/blob/master/gb/20/7/26/n12283981.md#1">【翻墙必看】中共女军官唐娟已被关进监狱</a></li>
-<li><a href="https://github.com/pgnstk3616/djy/blob/master/gb/20/7/24/n12281841.md#1">王力宏小儿子天赋异禀 不到2岁就拉小提琴</a></li>
-<li><a href="https://github.com/pgnstk3616/djy/blob/master/gb/20/7/24/n12282113.md#1">维持苗条身材之秘辛？IU吃饭习惯获夸赞</a></li>
-<li><a href="https://github.com/pgnstk3616/djy/blob/master/gb/20/7/24/n12281716.md#1">染疫保密3个月 好莱坞明星梅尔·吉布森曝现况</a></li>
-<li><a href="https://github.com/pgnstk3616/djy/blob/master/gb/20/7/25/n12283831.md#1">杨丞琳闲聊拍MV状况 李荣浩送冷气机到片场</a></li>
-<li><a href="https://github.com/pgnstk3616/djy/blob/master/gb/20/7/25/n12283020.md#1">江宏杰婚姻甜蜜保鲜 与福原爱“定期开会”</a></li>
-<li><a href="https://github.com/pgnstk3616/djy/blob/master/gb/20/7/22/n12274131.md#1">【命理】为何算命先生算不准？</a></li>
-<li><a href="https://github.com/pgnstk3616/djy/blob/master/gb/20/7/20/n12269082.md#1">【杨延昭传奇】古井生木</a></li>
-<li><a href="https://github.com/pgnstk3616/djy/blob/master/gb/20/7/21/n12271981.md#1">“一了百了” 如何了得？</a></li>
-<li><a href="https://github.com/pgnstk3616/djy/blob/master/gb/20/7/16/n12259877.md#1">从《傲慢与偏见》谈婚姻幸福：运气或选择？</a></li>
-<li><a href="https://github.com/pgnstk3616/djy/blob/master/gb/20/7/23/n12276969.md#1">新的人生在兑现（2）</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678895.md#1">【拍案惊奇】遇难者头七 东航空难变政治事件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/pgnstk3616/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/pgnstk3616/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/7/4/n9353678.htm">父亲节米蛋糕东区冠军出炉   26日进军全国赛</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/7/4/n9353678.htm">父亲节米蛋糕东区冠军出炉   26日进军全国赛</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://fo04.szzdcdn.tv/v.php?action=qrcode&url=https://github.com/pgnstk3616/djy/blob/master/gb/17/7/4/n9353678.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/pgnstk3616/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgnstk3616/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/pgnstk3616/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/pgnstk3616/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/pgnstk3616/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgnstk3616/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/pgnstk3616/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgnstk3616/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/pgnstk3616/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgnstk3616/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/pgnstk3616/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgnstk3616/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/pgnstk3616/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgnstk3616/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/pgnstk3616/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgnstk3616/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/pgnstk3616/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgnstk3616/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/pgnstk3616/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgnstk3616/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/pgnstk3616/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgnstk3616/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/pgnstk3616/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgnstk3616/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/pgnstk3616/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgnstk3616/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/pgnstk3616/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgnstk3616/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/pgnstk3616/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgnstk3616/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/pgnstk3616/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgnstk3616/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/pgnstk3616/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgnstk3616/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/pgnstk3616/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgnstk3616/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/pgnstk3616/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgnstk3616/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/pgnstk3616/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgnstk3616/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/pgnstk3616/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgnstk3616/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/pgnstk3616/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgnstk3616/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/pgnstk3616/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgnstk3616/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/pgnstk3616/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pgnstk3616/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/17/7/4/n9353678.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
